// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";
import "ccsds_mc/AttributeValue.proto";

package ccsds_mc.protobuf;

message Action {
extensions 9 to 109;

  optional ccsds_mal.protobuf.BOOLEAN stageStartedRequired = 1;
  optional ccsds_mal.protobuf.BOOLEAN stageProgressRequired = 2;
  optional ccsds_mal.protobuf.BOOLEAN stageCompletedRequired = 3;
  repeated ccsds_mc.protobuf.AttributeValue argumentValues = 4;
  repeated ccsds_mal.protobuf.LONG argumentIds = 5;
  repeated ccsds_mal.protobuf.BOOLEAN isConvertedValues = 6;
  optional ccsds_mal.protobuf.UINTEGER delay = 7;
  optional ccsds_mal.protobuf.LONG TCID = 8;
}
